# platanus-hack-25-team-16

./: .clauderc  .env.example  .gitignore  Dockerfile  LIBRARY_SPEC.md  README.md  README_SECURITY.md  platanus-hack-project.json  project-description.md  pyproject.toml  pytest.ini  test_forbidden_validator.py
.github/workflows/: mirror-to-platanus.yml
app/: settings.py  test_security.py  test_urls.py  urls.py
app/security/: __init__.py  checks.py  decorators.py
app/security/conf/: __init__.py  presets.py  settings.py
app/security/middleware/: __init__.py  rate_limiting.py  request_size_limit.py  security_headers.py  suspicious_patterns.py
app/security/migrations/: __init__.py
app/security/storage/: README.md  __init__.py  encrypted_file_field.py  models.py  signed_urls.py  validators.py
app/security/tests/: README.md  test_endpoints.py  test_file_storage.py  test_input_validation.py  test_middleware.py
app/security/utils/: __init__.py  helpers.py
app/security/validation/: __init__.py  input_validators.py  (+1 more)
auditory/: __init__.py  admin.py  apps.py  checks.py  http.py  registry.py
auditory/api/: __init__.py  admin.py  collectors.py  middleware.py  models.py
auditory/audit/: __init__.py  context.py  middleware.py  models.py  policies.py  sanitizer.py  signals.py  user_context.py
auditory/compliance/: reports.py
auditory/management/: __init__.py
auditory/migrations/: 0001_initial.py  0002_add_api_request_log.py  0003_apirequestlog.py  0004_allow_null_ip_address.py
auditory/tests/: test_api_logging.py
auth_security/: README.md  __init__.py  admin.py  apps.py  conf.py  decorators.py  signals.py
auth_security/authentication/: __init__.py  password_validators.py
auth_security/middleware/: __init__.py  auth_protection.py  axes_extension.py  session_security.py
auth_security/migrations/: 0001_initial.py  0002_initial.py
auth_security/models/: __init__.py  password.py  suspicious.py
auth_security/utils/: __init__.py  ip.py
data_protection/: README.md  apps.py  encryption.py  fields.py  models.py  test_data_protection.py  tests.py
data_protection/migrations/: 0001_initial.py
input_validation/: README.md  __init__.py  apps.py  sanitizers.py  serializers.py  validators.py
input_validation/middleware/: __init__.py  sanitization.py
input_validation/tests/: __init__.py  test_sanitizers.py  test_serializers.py  test_validators.py
security/: apps.py
security/audit/: middleware.py  signals.py
users/: README.md  admin.py  models.py
users/migrations/: 0001_initial.py
(+12 files in other folders)
