[project]
name = "hackathon-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.8",
    "djangorestframework>=3.16.1",
    "requests>=2.31.0",
    "django-axes>=8.0.0",
    "django-otp>=1.5.0",
    "qrcode>=7.4.0",  # For TOTP QR codes
]

[dependency-groups]
dev = [
    "ruff>=0.14.6",
]
