[project]
name = "hackathon-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.8",
    "djangorestframework>=3.16.1",
    "requests>=2.31.0",
    "django-axes>=8.0.0",
    "django-otp>=1.5.0",
    "qrcode>=7.4.0",  # For TOTP QR codes
    "python-decouple>=3.8",
    "redis>=5.0.0",
    "bleach>=6.2.0",
    "cryptography>=46.0.3",  # For encrypted fields (ISO27001 A.10.1)
    "python-magic>=0.4.27",
    "itsdangerous>=2.2.0",
    "whitenoise>=6.11.0",
    "django-crypto-fields>=0.4.0",  # Battle-tested encryption fields
    "gunicorn>=23.0.0",
    "psycopg[binary,pool]>=3.2.13",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-django>=4.11.1",
    "pytest-env>=1.2.0",
    "ruff>=0.14.6",
    "pytest>=8.0.0",
    "pytest-django>=4.5.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "app.settings"
django_find_project = false
pythonpath = ["."]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "--verbose",
    "--strict-markers",
    "--tb=short",
    "--disable-warnings",
    "--reuse-db",
]
markers = [
    "django_db: mark test as requiring database access",
    "slow: mark test as slow running",
]
testpaths = "app/security/tests"

[tool.pytest_env]
HOME = "~/tmp"
RUN_ENV = "test"
SECRET_KEY = "test-secret-key-for-pytest-please-change-in-production"
DEBUG = "True"
ALLOWED_HOSTS = "localhost,127.0.0.1,testserver"
